--- a/ansible/roles/bootstrapping-kubernetes-workers/templates/10-bridge.conf.j2
+++ b/ansible/roles/bootstrapping-kubernetes-workers/templates/10-bridge.conf.j2
@@ -8,7 +8,7 @@
     "ipam": {
         "type": "host-local",
         "ranges": [
-          [{"subnet": "{{ pod_cidr }"}]
+          [{"subnet": "{{ pod_cidr.stdout }}"}]
         ],
         "routes": [{"dst": "0.0.0.0/0"}]
     }
