--- a/ansible/roles/bootstrapping-kubernetes-workers/templates/kubelet-config.yaml.j2
+++ b/ansible/roles/bootstrapping-kubernetes-workers/templates/kubelet-config.yaml.j2
@@ -12,8 +12,8 @@ authorization:
 clusterDomain: "cluster.local"
 clusterDNS:
   - "10.32.0.10"
-podCIDR: "{{ pod_cidr }}"
+podCIDR: "{{ pod_cidr.stdout }}"
 resolvConf: "/run/systemd/resolve/resolv.conf"
 runtimeRequestTimeout: "15m"
-tlsCertFile: "/var/lib/kubelet/{{ worker_name }}.pem"
-tlsPrivateKeyFile: "/var/lib/kubelet/{{ worker_name }}-key.pem"
+tlsCertFile: "/var/lib/kubelet/{{ worker_name.stdout }}.pem"
+tlsPrivateKeyFile: "/var/lib/kubelet/{{ worker_name.stdout }}-key.pem"
